Correct menu shift on windows because of scrollbar (known bootstrap issue: https://github.com/twbs/bootstrap/issues/9855)

--- a/public/content/themes/ubti/static/src/scss/main.scss
+++ b/public/content/themes/ubti/static/src/scss/main.scss
@@ -1,2 +1,9 @@
 @import "old/style";
 @media (min-width:768px) {ul#menu-main_menu.collapse, ul#menu-main_menu.collapse.in {display:block !important;height:auto !important}.col-md-9.page-content {float:right}}
+body.modal-open-noscroll {
+  margin-right: 0!important;
+  overflow: hidden;
+}
+.modal-open-noscroll .navbar-fixed-top, .modal-open .navbar-fixed-bottom {
+  margin-right: 0!important;
+}
